Updated z-index issues

--- a/src/Home.css
+++ b/src/Home.css
@@ -4,8 +4,7 @@
 }
 
 .prof-journey{
-    text-align: left;
-    margin-left: 5em;
+    text-align: center;
 }
 
 .home-timeline{
