--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,4 +1,4 @@
-.demo-video{
+/* .demo-video{
     position:absolute;
     z-index: -1;
-}    
+}     */
