--- a/src/nav.css
+++ b/src/nav.css
@@ -1,5 +1,6 @@
 .navbar {
     height: 4em;
+    z-index: 1000;
     position: fixed;
     top: 0; 
     width: 100%;
